--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "4.6.2",
     "chart.js": "2.9.4",
     "classnames": "2.3.2",
+    "formik": "^2.4.4",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": ">=16.0.0",
@@ -57,8 +58,10 @@
     "react-dom": ">=16.0.0",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "reactstrap": "8.10.0",
-    "sass": "1.62.1"
+    "sass": "1.62.1",
+    "yup": "^1.2.0"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
