--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "reactstrap": "8.10.0",
     "sass": "1.62.1",
     "yup": "^1.2.0"
